Update model attachments description to specify PDF format

--- a/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
+++ b/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
@@ -4,7 +4,7 @@
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
-   You can also include model attachments^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] as context documents:
+   You can also include model attachments in `.pdf` format^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] as context documents:
 
       a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
       a. Check off the attachment files you would like to include as extra context.
@@ -28,7 +28,7 @@
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
-   You can also include [model attachments](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} as context documents:
+   You can also include [model attachments in `.pdf` format](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} as context documents:
 
       a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
       a. Check off the attachment files you would like to include as extra context.
