Clarify attachment selection for model documents

--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -41,7 +41,7 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 ::: {.callout title="Uploaded files must be less than 50 MB each in size."}
 - To work with attachments on models, first add an attachment inventory field.[^6]
-- Select attachments in `.pdf` format on models as context documents when generating text blocks with AI within your documents.[^7]
+- Select model attachments in `.pdf` format as context documents when generating text blocks with AI within your documents.[^7]
 :::
 
 ::: {.panel-tabset}
