PDF context feature flag

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -3,6 +3,8 @@ title: "Work with content blocks"
 date: last-modified
 aliases:
   - /guide/work-with-content-blocks.html
+includes:
+  pdf-context: false
 ---
 
 Make edits to your model documents by adding or removing content blocks directly in the online editor.
@@ -113,6 +115,8 @@ Generating content drafts for your model documentation works best after you've l
 :::
 
 While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts:
+
+<!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
