--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -3,6 +3,8 @@ title: "Edit model inventory fields"
 date: last-modified
 aliases:
   - /guide/edit-model-inventory-fields.html
+includes:
+  pdf-context: false
 ---
 
 Edit individual detail fields on a model to ensure that model details are accurate and up-to-date.
@@ -39,10 +41,22 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 ### Manage supporting documentation
 
+<!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
+
+:::: {.content-visible when-format="html" when-meta="includes.pdf-context"}
 ::: {.callout title="Uploaded files must be less than 50 MB each in size."}
 - To work with attachments on models, first add an attachment inventory field.[^6]
 - Select model attachments in `.pdf` format as context documents when generating text blocks with AI within your documents.[^7]
 :::
+
+::::
+
+:::: {.content-visible when-format="html" unless-meta="includes.pdf-context"}
+::: {.callout title="Uploaded files must be less than 50 MB each in size."}
+To work with attachments on models, first add an attachment inventory field.[^6]
+:::
+
+::::
 
 ::: {.panel-tabset}
 
@@ -75,4 +89,8 @@ Edit individual detail fields on a model to ensure that model details are accura
 
 [^6]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
 
+:::: {.content-visible when-format="html" when-meta="includes.pdf-context"}
 [^7]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#generate-text-with-ai-beta)
+
+:::
+
