--- a/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
+++ b/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
@@ -4,11 +4,15 @@
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
+   <!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
+
+   :::: {.content-visible when-format="html" when-meta="includes.pdf-context"}
    You can also include model attachments in `.pdf` format^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] as context documents:
 
       a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
       a. Check off the attachment files you would like to include as extra context.
       a. Click **Add to Context** to include your selected attachments alongside your prompt to assist in text generation.
+   ::::
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
@@ -28,11 +32,13 @@
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
+   :::: {.content-visible when-format="revealjs" when-meta="includes.pdf-context"}
    You can also include [model attachments in `.pdf` format](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} as context documents:
 
       a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
       a. Check off the attachment files you would like to include as extra context.
       a. Click **Add to Context** to include your selected attachments alongside your prompt to assist in text generation.
+   ::::
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
