docs: Include model attachments as context when using GenAI (#1056)
* Model attachments as context documents

* Update model attachments description to specify PDF format

* Specify PDF format for model attachments in documentation

* Clarify attachment selection for model documents

* PDF context feature flag

--- a/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
+++ b/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
@@ -1,8 +1,18 @@
 
 :::: {.content-visible unless-format="revealjs"}
-1. Click **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** in the toolbar while editing a content block.
+1. Click **[{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup>]{.pink} (Generate Text with AI)** in the toolbar while editing a content block.
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
+
+   <!-- PDF CONTEXT DOCUMENTS ARE BEHIND A FEATURE FLAG -->
+
+   :::: {.content-visible when-format="html" when-meta="includes.pdf-context"}
+   You can also include model attachments in `.pdf` format^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] as context documents:
+
+      a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
+      a. Check off the attachment files you would like to include as extra context.
+      a. Click **Add to Context** to include your selected attachments alongside your prompt to assist in text generation.
+   ::::
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
@@ -14,15 +24,21 @@
    - Ensure that content is in compliance with the quality guidelines outlined by your organization. 
    - Use the content editing toolbar^[[Content editing toolbar](#content-editing-toolbar)] just as you would with any other text block.
 
-![Generating content with AI within a simple text block](/guide/model-documentation/generate-with-ai.gif){width=90% fig-alt="An animation that showcases the Generate with AI feature within a simple text block" .screenshot}
-
 ::::
 
 <!-- INLINE LINKS FOR REVEALJS TRAINING -->
 :::: {.content-hidden unless-format="revealjs"}
-1. Click **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** in the toolbar while editing a content block.
+1. Click **[{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup>]{.pink} (Generate Text with AI)** in the toolbar while editing a content block.
 
 1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
+
+   :::: {.content-visible when-format="revealjs" when-meta="includes.pdf-context"}
+   You can also include [model attachments in `.pdf` format](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} as context documents:
+
+      a. Click **{{< fa square-plus >}}** and select **{{< fa file-circle-plus >}} Add Document to Context**.
+      a. Check off the attachment files you would like to include as extra context.
+      a. Click **Add to Context** to include your selected attachments alongside your prompt to assist in text generation.
+   ::::
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
@@ -30,7 +46,5 @@
    - Or, submit a different prompt in the dialogue box and click **Send** to regenerate a different draft.
 
 1. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy, ensure that content is in compliance with the quality guidelines outlined by your organization.
-
-![Generating content with AI within a simple text block](/guide/model-documentation/generate-with-ai.gif){width=90% fig-alt="An animation that showcases the Generate with AI feature within a simple text block" .screenshot}
 
 ::::
