Setup: Work with document versions

--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -4,6 +4,7 @@ date: last-modified
 listing:
   - id: draft-reports
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
@@ -11,6 +12,7 @@ listing:
       - review-model-documentation.qmd
       - assess-compliance.qmd
       - ../model-documentation/work-with-content-blocks.qmd
+      - ../model-documentation/work-with-document-versions.qmd
   - id: complete-reports
     type: grid
     grid-columns: 2
