--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -4,6 +4,7 @@ date: last-modified
 listing:
   - id: draft-documentation
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
@@ -11,6 +12,7 @@ listing:
       - view-documentation-guidelines.qmd
       - work-with-content-blocks.qmd
       - work-with-test-results.qmd
+      - work-with-document-versions.qmd
   - id: complete-documentation
     type: grid
     max-description-length: 250
