--- a/site/guide/model-documentation/_add-content-blocks.qmd
+++ b/site/guide/model-documentation/_add-content-blocks.qmd
@@ -4,7 +4,9 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
+
+1. Click on the document file you want to add a content block to.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
 1. Click on a section header to expand that section and add content.
 
