--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -28,9 +28,11 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. In any section of the documentation for a model, click **{{< var vm.product >}} Insights™** in the top right corner to expand the **{{< var vm.product >}} Insights™** sidebar.
+4. Click on a Documentation type file.[^4]
+
+5. In any section of the documentation for a model, click **{{< var vm.product >}} Insights™** in the top right corner to expand the **{{< var vm.product >}} Insights™** sidebar.
 
    **Documentation Guidelines** are shown for each document section, associated with the template configured by your model validation team.
 
@@ -42,3 +44,5 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qm
