--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -32,19 +32,21 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^7]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Artifact to Report** and select the artifact type[^8] you want to add:
+4. Click on a Validation Report type file.[^7]
+
+5. In any section of the report where the button is available, click **{{< fa link >}} Link Artifact to Report** and select the artifact type[^8] you want to add:
 
    - Validation Issue
    - Policy Exception
    - Model Limitation
 
-5. On the Link Artifact to Report modal that opens, click **{{< fa plus >}} Add {Artifact Type}**.
+6. On the Link Artifact to Report modal that opens, click **{{< fa plus >}} Add {Artifact Type}**.
 
-6. On the modal that opens, provide information for your artifact.
+7. On the modal that opens, provide information for your artifact.
 
-7. When you are done, click **Add {Artifact Type}** to submit the artifact.
+8. When you are done, click **Add {Artifact Type}** to submit the artifact.
 
 ## Update artifacts
 
