--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -34,18 +34,20 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^5]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+
+4. Click on a Validation Report type file.[^5]
 
    Expand any subsection of the validation report you would like to work with.
 
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
+5. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
 
-5. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
+6. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
    
    - Available evidence is associated with the relevant documentation section. 
    - If you are not sure if something is relevant, you can expand the section by clicking **{{< fa chevron-down >}}** for more details.
 
-6. Click **Update Linked Evidence**.
+7. Click **Update Linked Evidence**.
 
    - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate and is connected to the correct documentation section.
    - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
