--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -80,7 +80,9 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.[^7]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.
+
+4. Click on a Validation Report type file.[^7]
 
 ### Add or edit validation reports
 
