--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -132,15 +132,17 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 2. Select a model or find your model by applying a filter or searching for it.[^12]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.[^13]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^13]
 
-4. Click on a section header to expand that section and remove content.
+4. Click on the document file you want to remove a block from.[^14]
 
-5. Locate the block you wish to remove, and hover over it until the block's toolbar appears in the top right-hand corner.
+5. Click on a section header to expand that section and remove content.
 
-6. Select **{{< fa trash >}} Delete** to remove the block.
+6. Locate the block you wish to remove, and hover over it until the block's toolbar appears in the top right-hand corner.
 
-7. After you confirm, the content block will be deleted.
+7. Select **{{< fa trash >}} Delete** to remove the block.
+
+8. After you confirm, the content block will be deleted.
 
 
 <!-- FOOTNOTES -->
@@ -169,4 +171,6 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 [^12]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^13]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^13]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^14]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
