--- a/site/guide/monitoring/enable-monitoring.qmd
+++ b/site/guide/monitoring/enable-monitoring.qmd
@@ -81,11 +81,13 @@ Before you can start sending ongoing monitoring data from your developer environ
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^6]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. From the **[template]{.smallcaps}** drop-down, select one of the available monitoring templates. 
+4. Click on a Ongoing Monitoring type file.[^6]
 
-5. Click **Use Template** to apply your desired template.
+5. From the **[template]{.smallcaps}** drop-down, select one of the available monitoring templates. 
+
+6. Click **Use Template** to apply your desired template.
 
    - After you select a template, the initial document where your ongoing monitoring results will be stored becomes available. 
    - Review this documents structure to confirm that it meets your requirements, then start running your code to populate the template with monitoring results. 
