--- a/site/guide/reporting/export-documents.qmd
+++ b/site/guide/reporting/export-documents.qmd
@@ -30,44 +30,50 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.^
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.[^5]
 
-4. In right sidebar, click **{{< fa download >}} Export Document**.
+4. Click on a Documentation type file.[^6]
 
-    Configure whether or not comments[^5] left on your document should be exported in your document.
+5. In right sidebar, click **{{< fa download >}} Export Document**.
 
-5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+    Configure whether or not comments[^7] left on your document should be exported in your document.
+
+6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## Export validation report
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^6]
+2. Select a model or find your model by applying a filter or searching for it.[^8]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.[^9]
 
-4. In right sidebar, click **{{< fa download >}} Export Document**.
+4. Click on a Validation Report type file.[^10]
 
-5. Configure what is exported in your document by checking off the relevant boxes:
+5. In right sidebar, click **{{< fa download >}} Export Document**.
 
-   - Include compliance summary[^7]
-   - Include validation guidelines information[^8]
+6. Configure what is exported in your document by checking off the relevant boxes:
+
+   - Include compliance summary[^11]
+   - Include validation guidelines information[^12]
    - Include validation guideline adherence details
-   - Include comments left on document[^9]
+   - Include comments left on document[^13]
 
-6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## Export ongoing monitoring reports
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^10]
+2. Select a model or find your model by applying a filter or searching for it.[^14]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^11]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^15]
+
+1. Click on an Ongoing Monitoring type file.[^16]
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-    Configure whether or not comments[^12] left on your document should be exported in your document.
+    Configure whether or not comments[^17] left on your document should be exported in your document.
 
 5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
@@ -83,18 +89,28 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^5]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^6]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^7]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^9]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^9]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^11]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^11]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
-[^12]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^12]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+
+[^13]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+
+[^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^15]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^16]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^17]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
