--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -25,18 +25,20 @@ To transform an existing text block into a reusable block:
 
 2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.[^3]
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. Select the relevant section containing the text block you want to make reusable.
+4. Click on the file you'd like to copy a text block from.[^3]
 
-4. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
+5. Select the relevant section containing the text block you want to make reusable.
+
+6. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
 
     - The **[name]{.smallcaps}** of your text block
     - (Optional) A **[description]{.smallcaps}** for your text block
     - The templated **[content]{.smallcaps}** for your text block
     - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
 
-5. Click **Add Block** to save your text block.
+7. Click **Add Block** to save your text block.
 
 Once added, insert private or shared text blocks into your documents,[^4] or shared text blocks into document templates.[^5]
 
