--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -26,7 +26,7 @@ These stock documents cannot be deleted, only edited.
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
 4. Click **{{< fa plus >}} Create Document**.
 
@@ -44,11 +44,13 @@ These stock documents cannot be deleted, only edited.
 
 2. Select a model or find your model by applying a filter or searching for it.[^9]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
-4. Jump to any section of the document by clicking on a heading you would like to view.
+4. Click on the document file you'd like to edit.
 
-4. In any section of the document, click to add or edit content.[^10]
+5. Jump to any section of the document by clicking on a heading you would like to view.
+
+6. In any section of the document, click to add or edit content.[^10]
 
     Use the text editor functions to edit the content of the section.
 
@@ -62,7 +64,7 @@ Deletion of documents on models is permanent and cannot be undone.
 
 2. Select a model or find your model by applying a filter or searching for it.[^11]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
 
 4. Hover over the document you want to delete.
 
