--- a/site/guide/model-documentation/_check-model-documentation.qmd
+++ b/site/guide/model-documentation/_check-model-documentation.qmd
@@ -3,7 +3,7 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
 
 1. Click on a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
@@ -54,9 +54,7 @@ Use the feedback provided by the {{< var validmind.checker >}} to review the app
 
 1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
-
-1. Click on [a Documentation type file](/guide/templates/working-with-model-documents.qmd){target="_blank"}.
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
 
 1. Locate the {{< var vm.checker >}} box on the right and click **{{< fa check >}} Check Document**.
 
