Footnote cleanup pt2

--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -32,11 +32,11 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^7]
 
-4. Click on a Validation Report type file.[^7]
+4. Click on a Validation Report type file.[^8]
 
-5. In any section of the report where the button is available, click **{{< fa link >}} Link Artifact to Report** and select the artifact type[^8] you want to add:
+5. In any section of the report where the button is available, click **{{< fa link >}} Link Artifact to Report** and select the artifact type[^9] you want to add:
 
    - Validation Issue
    - Policy Exception
@@ -52,7 +52,7 @@ When linking artifacts to validation reports,[^5] you can add artifacts as you a
 
 As artifacts get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the artifact you want to update.[^9]
+1. Locate the artifact you want to update.[^10]
 
 2. Click on a field to make changes.
 
@@ -93,16 +93,16 @@ Uploaded files must be less than 50 MB each in size.
 ## Delete artifacts
 
 ::: {.callout-important title="Artifact deletion is permanent."}
-- While artifact deletion will be logged under your {{< fa wifi >}} Model Activity,[^10] deleted artifacts cannot be retrieved.
-- Deleting an artifact will also remove it from any validation reports[^11] it was previously attached to.
+- While artifact deletion will be logged under your {{< fa wifi >}} Model Activity,[^11] deleted artifacts cannot be retrieved.
+- Deleting an artifact will also remove it from any validation reports[^12] it was previously attached to.
 
 :::
 
 If you logged an artifact in error or otherwise no longer need to track that artifact, you can delete it:
 
-1. Locate the artifact you want to delete.[^12]
+1. Locate the artifact you want to delete.[^13]
 
-2. On the artifact's detail page, click **{{< fa trash-can>}} Delete {Artifact Type}**[^13] in the right sidebar.
+2. On the artifact's detail page, click **{{< fa trash-can>}} Delete {Artifact Type}**[^14] in the right sidebar.
 
 3. After you confirm, the artifact will be permanently deleted.
 
@@ -121,16 +121,20 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^7]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^8]: [Manage artifact types](manage-artifact-types.qmd)
+<!-- HERE -->
 
-[^9]: [View and filter artifacts](view-filter-artifacts.qmd)
+[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^9]: [Manage artifact types](manage-artifact-types.qmd)
 
-[^11]: [Link artifacts to reports](/guide/model-validation/assess-compliance.qmd#link-artifacts-to-reports)
+[^10]: [View and filter artifacts](view-filter-artifacts.qmd)
 
-[^12]: [View and filter artifacts](view-filter-artifacts.qmd)
+[^11]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^13]: [Manage artifact types](manage-artifact-types.qmd)
+[^12]: [Link artifacts to reports](/guide/model-validation/assess-compliance.qmd#link-artifacts-to-reports)
+
+[^13]: [View and filter artifacts](view-filter-artifacts.qmd)
+
+[^14]: [Manage artifact types](manage-artifact-types.qmd)
