--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -34,9 +34,9 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^5]
 
-4. Click on a Validation Report type file.[^5]
+4. Click on a Validation Report type file.[^6]
 
    Expand any subsection of the validation report you would like to work with.
 
@@ -75,4 +75,6 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^5]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
