--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -80,9 +80,9 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
 
 2. Select a model or find your model by applying a filter or searching for it.[^6]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.[^7]
 
-4. Click on a Validation Report type file.[^7]
+4. Click on a Validation Report type file.[^8]
 
 ### Add or edit validation reports
 
@@ -90,8 +90,8 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
 
 2. Add **Risk Assessment Notes**, as well as assess compliance for each section of your validation report:
 
-    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^8]
-    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^9]
+    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^9]
+    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^10]
 
 3. For any **Risk Assessment Notes**, save your edits to retain your changes:
 
@@ -99,7 +99,7 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
    - Select **Save current revision** and enter a name.
    - Click {{< fa check >}} to save the revision.
 
-   You can also suggest changes and leave comments.[^10]
+   You can also suggest changes and leave comments.[^11]
 
    ::: {.callout}
    Compliance assessments and linking evidence and artifacts are both saved automatically after selection.
@@ -136,11 +136,13 @@ Collaborate with other stakeholders and submit your work for approval:
 
 [^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^7]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^9]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^9]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
 
-[^10]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+
+[^11]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
