--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -28,9 +28,9 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^4]
 
-4. Click on a Documentation type file.[^4]
+4. Click on a Documentation type file.[^5]
 
 5. In any section of the documentation for a model, click **{{< var vm.product >}} Insights™** in the top right corner to expand the **{{< var vm.product >}} Insights™** sidebar.
 
@@ -45,4 +45,6 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qm
+[^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
